--- a/repositoriosistemas/Inicio.html
+++ b/repositoriosistemas/Inicio.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Login</title></head>
-<body bgcolor=#FF5733>
+<body bgcolor=#FFFFFF>
 <div>
 <br><br><br><br>
 
