--- a/repositoriosistemas/Inicio.html
+++ b/repositoriosistemas/Inicio.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Login</title></head>
-<body bgcolor=#FFFF00>
+<body bgcolor=#00CED1>
 <div>
 <br><br><br><br>
 
